src/test/deca/context/invalid/not_null.deca
// Description :
// test de not sur null
//
// Résultats :
// Erreur contextuelle
// Ligne 9 : Négation sur un objet de type null impossible (règle 3.37)

{
  !null;
}
